forget to push last update, fixed bug with uneven title background

--- a/index.css
+++ b/index.css
@@ -56,20 +56,13 @@ h2 {
   width: 375px;
   height: 375px;
   margin: 1rem;
-  /* background-color: white; */
   background-size: 450px 400px;
   background-image: url("img/side_triangles.jpg");
   border-radius: 32px;
-  /* border-style: solid; */
-  /* border-width: 8px; */
-  /* border-color: green; */
-  /* box-shadow: 10px 10px inset green, 10px 10px green, 20px 20px 5px inset var(--gray), 20px 20px 5px var(--green_shadow); */
-  /* box-shadow: 10px 10px green, 20px 20px 5px var(--green_shadow); */
   box-shadow: 0px 0px 6px var(--green_shadow);
   transition: height 0.5s;
   padding: 1rem;
   container-type: size;
-  /* padding: 8px; */
 }
 
 .git_link {
@@ -77,16 +70,19 @@ h2 {
   transition: opacity 0.3s linear;
   background-color: green;
   color: white;
-  padding: 10px 100px 10px 100px;
+  width: 100%;
+  padding: 10px 0px 10px 0px;
   border-radius: 0px 0px 24px 24px;
   margin: 0;
   text-decoration: none;
 }
 
 .project_name {
+  display: inline-block;
   color: white;
   background-color: green;
-  padding: 10px 100px 10px 100px;
+  width: 100%;
+  padding: 10px 0px 10px 0px;
   border-radius: 24px 24px 0px 0px;
 }
 
@@ -102,13 +98,13 @@ h2 {
   text-shadow: 0px 0px 3px var(--white);
   transition: opacity 0.3s linear;
 }
-
+/*
 @media (width <= 975px) {
   .project {
     height: 375px;
   }
 }
-
+*/
 /*
 @container (height: 375px) {
   .git_link {
@@ -121,6 +117,13 @@ h2 {
 */
 .project:hover {
   height: 375px;
+}
+
+.git_link:hover { 
+  text-shadow: 0px 0px 2px black;
+}
+.git_link:active { 
+  background-color: var(--green_shadow)
 }
 
 #git_icon { 
